classificar dados inseridos pelo usuario

--- a/ag002.ipynb
+++ b/ag002.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "6305c636",
    "metadata": {},
    "outputs": [
@@ -97,10 +97,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1a5ab71e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Acurácia: 1.0\n",
+      "\n",
+      "Matriz de Confusão:\n",
+      "[[10  0  0]\n",
+      " [ 0  9  0]\n",
+      " [ 0  0 11]]\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
@@ -135,6 +149,58 @@
     "print(\"\\nMatriz de Confusão:\")\n",
     "print(conf_matrix)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df4ef1e3",
+   "metadata": {},
+   "source": [
+    "### Classificar dados inseridos pelo usuário"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "785f12ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Classificação de nova amostra ---\n",
+      "\n",
+      "A espécie prevista é: Iris-setosa\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\n--- Classificação de nova amostra ---\")\n",
+    "\n",
+    "# Solicitar valores ao usuário\n",
+    "sepal_length = float(input(\"Informe o sepal length (cm): \"))\n",
+    "sepal_width  = float(input(\"Informe o sepal width (cm): \"))\n",
+    "petal_length = float(input(\"Informe o petal length (cm): \"))\n",
+    "petal_width  = float(input(\"Informe o petal width (cm): \"))\n",
+    "\n",
+    "# Criar um DataFrame com a nova amostra\n",
+    "nova_amostra = pd.DataFrame([[\n",
+    "    sepal_length, sepal_width, petal_length, petal_width\n",
+    "]], columns=X.columns)\n",
+    "\n",
+    "# Fazer a previsão\n",
+    "pred = model.predict(nova_amostra)[0]\n",
+    "\n",
+    "# Converter rótulo numérico para nome da espécie\n",
+    "mapa_species = {\n",
+    "    0: \"Iris-setosa\",\n",
+    "    1: \"Iris-versicolor\",\n",
+    "    2: \"Iris-virginica\"\n",
+    "}\n",
+    "\n",
+    "print(\"\\nA espécie prevista é:\", mapa_species[pred])"
+   ]
   }
  ],
  "metadata": {
@@ -153,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
